Add endpoint to get püarties of user
