# services/party/docs/swagger.json
@@ -101,6 +101,41 @@
                 }
             }
         },
+        "/user/{uId}": {
+            "get": {
+                "description": "Returns a list of parties of a user",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get parties of a user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User id",
+                        "name": "uId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/datastruct.PublicParty"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
         "/{pId}": {
             "get": {
                 "description": "Get a Party by it's id",
@@ -229,11 +264,7 @@
         "datastruct.PublicParty": {
             "type": "object",
             "properties": {
-                "creatorId": {
-                    "type": "string"
-                },
                 "id": {
-                    "description": "PARTY#CreatorId",
                     "type": "string"
                 },
                 "isPublic": {
@@ -248,7 +279,7 @@
                 "title": {
                     "type": "string"
                 },
-                "ttl": {
+                "userId": {
                     "type": "string"
                 }
             }
@@ -289,9 +320,6 @@
                 "title"
             ],
             "properties": {
-                "isPublic": {
-                    "type": "boolean"
-                },
                 "lat": {
                     "type": "number"
                 },
