# services/party/internal/handler/get_by_user.go
@@ -1,0 +1,31 @@
+package handler
+
+import (
+	"net/http"
+
+	"github.com/jonashiltl/sessions-backend/services/party/internal/datastruct"
+	"github.com/labstack/echo/v4"
+)
+
+// @Summary Get parties of a user
+// @Description Returns a list of parties of a user
+// @Produce json
+// @Param uId path string true "User id"
+// @Success 200 {array} datastruct.PublicParty
+// @Failure 400 {object} echo.HTTPError
+// @Router /user/{uId} [get]
+func (a *httpApp) GetByUser(c echo.Context) error {
+	uId := c.Param("uId")
+
+	ps, err := a.partyService.GetByUser(c.Request().Context(), uId)
+	if err != nil {
+		return err
+	}
+
+	var pp []datastruct.PublicParty
+	for _, p := range ps {
+		pp = append(pp, p.ToPublicParty())
+	}
+
+	return c.JSON(http.StatusOK, pp)
+}
