# services/party/main.go
@@ -56,6 +56,7 @@ func main() {
 	e.DELETE("/:pId", httpApp.DeleteParty)
 	e.PATCH("/:pId", httpApp.UpdateParty)
 
+	e.GET("/user/:uId", httpApp.GetParty)
 	e.PATCH("/near", httpApp.GeoSearch)
 
 	if err := e.Start(":8080"); err != http.ErrServerClosed {
